fixes overflow

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@ body {
   font-size: 1.2rem;
   padding: 1%;
   line-height: 1.5rem;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .main-container {
